Moving jlink/jpackage to Github workflow